--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/x-charts": "^7.25.0",
     "@tailwindcss/vite": "^4.0.1",
     "chart.js": "^4.4.7",
     "chartjs-chart-matrix": "^2.0.1",
@@ -21,6 +24,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.4",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
