add heatMap, set sidebar styling, remove options buttons

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/x-charts": "^7.25.0",
+    "@react-google-maps/api": "^2.20.5",
     "@tailwindcss/vite": "^4.0.1",
+    "ag-grid-community": "^33.0.4",
+    "ag-grid-react": "^33.0.4",
     "chart.js": "^4.4.7",
     "chartjs-chart-matrix": "^2.0.1",
     "i18next": "^24.2.2",
