add meta ads options, currency changer, language translator etc

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.0.1",
     "ag-grid-community": "^33.0.4",
     "ag-grid-react": "^33.0.4",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "chartjs-chart-matrix": "^2.0.1",
     "i18next": "^24.2.2",
